--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Homework 6"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 394,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +48,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Useful Functions"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +65,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Part A : Least Square Method with Steepest Descent"
    ]
@@ -87,13 +88,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Exact Line Search"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +122,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Steepest Descent Method"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,21 +153,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0],\n",
+       "       [0]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ws_a, fs_a, outputs_a = steepestDescentMethod(f_a, grad_fa, [0,0], 0.001)\n",
-    "ws_a, fs_a"
+    "xk = np.array([0,0]).reshape(2,1)\n",
+    "xk"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ws_a, fs_a, outputs_a = steepestDescentMethod(f_a, grad_fa, [0,0], 0.001)\n",
+    "#ws_a, fs_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ws_b, fs_b, outputs_b = steepestDescentMethod(f_b, grad_fb, [0,0], 0.001)\n",
     "ws_b, fs_b"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part B : Nonlinear Regression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = np.array(train_data['x'])\n",
+    "y_train = np.array(train_data['y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backpropagation(input_data,label_data,epsilon=0.001):\n",
+    "    x_train=input_data.reshape(100,1)\n",
+    "    all_data=np.full((100, 1), -1)\n",
+    "    x_train=np.concatenate((all_data,x_train),axis=1)\n",
+    "    y_train=label_data.reshape(100,1)\n",
+    "    t=0\n",
+    "    learning_rate=0.9\n",
+    "    alpha=0.5\n",
+    "    weight_first=np.random.rand(20,2)\n",
+    "    weight_second=np.random.rand(1,3)#2 hidden units\n",
+    "    h=np.random.rand(100,2)\n",
+    "    H=np.random.rand(100,2)\n",
+    "    o=np.random.rand(100,1)\n",
+    "    O=np.random.rand(100,1)\n",
+    "    sigma_output=np.random.rand(100,1)\n",
+    "    sigma_hidden=np.random.rand(100,2)\n",
+    "    while(True):\n",
+    "        x_train=shuffle(x_train)    \n",
+    "        for p in range(100):\n",
+    "            for j in range(2):\n",
+    "                for k in range(2):\n",
+    "                    h[p,j]=np.sum(weight_first[j,k]*x_train[p,k])\n",
+    "                H[p,j]=1/(1+np.exp(h[p,j]))\n",
+    "\n",
+    "            all_data_2=np.full((100,1),-1)\n",
+    "            all_data_2=np.concatenate((all_data_2,H),axis=1)\n",
+    "            H_with_zero=all_data_2\n",
+    "\n",
+    "            for i in range(1):\n",
+    "                for j in range(3):\n",
+    "                    o[p,i]=weight_second[i,j]*H_with_zero[p,j]\n",
+    "                O[p,i]=o[p,i] \n",
+    "            for i in range(1):    \n",
+    "                sigma_output[p,i]=y_train[p,i]-O[p,i]\n",
+    "            for j in range(2):    \n",
+    "                for i in range(1):\n",
+    "                    sum_amount=np.sum(weight_second[i,j]*sigma_output[p,i])\n",
+    "                sigma_hidden[p,j]=H[p,j]*(1-H[p,j])*sum_amount\n",
+    "            for j in range(3):    \n",
+    "                delta=learning_rate*sigma_output[p,i]*H_with_zero[p,j]\n",
+    "                weight_second[i,j]=weight_second[i,j]+delta\n",
+    "            for j in range(2):   \n",
+    "                for k in range(2):    \n",
+    "                    delta_small=learning_rate*sigma_hidden[p,j]*x_train[p,k]\n",
+    "                    weight_first[j,k]=weight_first[j,k]+delta_small\n",
+    "        learning_rate=learning_rate*alpha\n",
+    "        print(learning_rate)\n",
+    "        t=t+1\n",
+    "        if(learning_rate<epsilon):\n",
+    "            break;\n",
+    "    return weight_first,weight_second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.45\n",
+      "0.225\n",
+      "0.1125\n",
+      "0.05625\n",
+      "0.028125\n",
+      "0.0140625\n",
+      "0.00703125\n",
+      "0.003515625\n",
+      "0.0017578125\n",
+      "0.00087890625\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_first,weight_second=backpropagation(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
