Backpropagation algorithm is implemented

--- a/Akin.ipynb
+++ b/Akin.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Homework 6"
    ]
@@ -49,13 +48,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Useful Functions"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +65,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Part B : Neural Network"
    ]
@@ -92,20 +91,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sigmoidalFunc = lambda output_array : 1 / (1 + np.exp(-output_array))\n",
+    "sigmoidalDeriv = lambda output_array : sigmoidalFunc(output_array) * (1 - sigmoidalFunc(output_array))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def backpropagation(patterns, hiddenLayerSize, alpha = 0.5, learningRate = 0.9, epsilon = 0.001):\n",
     "    t = 0\n",
-    "    w_matrix = np.random.rand((hiddenLayerSize, np.size(patterns,1))) # patterns data includes y values, its column size is selected since we will add x0 to input layer\n",
-    "    W_matrix = np.random.rand((1, hiddenLayerSize+1)) # we will add h0 to hidden layer\n",
+    "    P = np.size(patterns, 0)\n",
+    "    w_matrix = np.random.rand(hiddenLayerSize, np.size(patterns,1))*100 # patterns data includes y values, its column size is selected since we will add x0 to input layer\n",
+    "    W_matrix = np.random.rand(1, hiddenLayerSize+1)*100 # we will add h0 to hidden layer\n",
     "    while(alpha > epsilon):\n",
     "        np.random.shuffle(patterns)\n",
-    "        expectedOutputs = patterns[:,:-1]\n",
-    "        inputLayers = np.insert(patterns, 0, -1, axis=1)[:,:-1] # x0 is added to all patterns and its value is -1, output values are excluded\n",
+    "        desiredOutputs = patterns[:,:-1].reshape(-1,1)\n",
+    "        inputLayers = np.transpose(np.insert(patterns, 0, -1, axis=1)[:,:-1]) # x0 is added to all patterns and its value is -1, output values are excluded\n",
     "        hiddenLayer = np.zeros((hiddenLayerSize+1, 1)) # hiddenlayersize doesn't include h0 so it's added\n",
     "        hiddenLayer[0,0] = -1 # h0 is equal to -1\n",
-    "        \n",
-    "\n",
-    "\n",
-    "\n"
+    "        actualOutput = np.zeros_like(desiredOutputs)\n",
+    "        for p in range(P):\n",
+    "            hiddenLayer[1:] = sigmoidalFunc(w_matrix @ inputLayers[:,p].reshape(-1,1))\n",
+    "            actualOutput[p] = W_matrix @ hiddenLayer\n",
+    "            # since the function is linear, net output is equal to actual output\n",
+    "            S_output = (1 * (desiredOutputs[p] - actualOutput[p])).reshape(-1,1)\n",
+    "            S_hidden = (sigmoidalDeriv(hiddenLayer[1:]) * (np.transpose(W_matrix[:,1:]) @ S_output)).reshape(-1,1)\n",
+    "            delta_W = alpha * S_output @ np.transpose(hiddenLayer)\n",
+    "            W_matrix += delta_W\n",
+    "            delta_w = alpha * S_hidden @ np.transpose(inputLayers[:,p].reshape(-1,1))\n",
+    "            w_matrix += delta_w\n",
+    "        alpha = learningRate * alpha\n",
+    "        t += 1\n",
+    "    actualHiddens = w_matrix @ inputLayers # h1, ..., hj\n",
+    "    actualOutputMatrix = W_matrix @ np.insert(actualHiddens, 0, -1, axis=0) # o1, ..., oi\n",
+    "    error = np.sum(np.square(desiredOutputs - actualOutputMatrix))\n",
+    "    return w_matrix, W_matrix, error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(array([[ 3.30973008e+04, -9.32366583e+08],\n        [ 3.47744880e+04, -1.06357359e+09],\n        [ 2.94124974e+04, -6.58364403e+08]]),\n array([[-370.85781848,  -96.94829827, -110.62659934,  -68.38362196]]),\n 1.3618123684146144e+32)"
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patterns = np.array(train_data)\n",
+    "backpropagation(patterns, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(array([[ 3.79614950e+11, -1.04563606e+14, -3.42905476e+16],\n        [ 3.79616710e+11, -1.04581944e+14, -3.43109373e+16],\n        [ 3.79614760e+11, -1.04561629e+14, -3.42883494e+16]]),\n array([[-97721.02106848, -90420.01284156, -90480.12991487,\n         -90413.5315535 ]]),\n 2.178839541466855e+59)"
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patterns2 = np.insert(np.array(train_data), 1, np.square(train_data['x']), axis=1)\n",
+    "backpropagation(patterns2, 3)"
    ]
   }
  ],
@@ -125,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
