Hidden unit algorithm is implemented

--- a/Akin.ipynb
+++ b/Akin.ipynb
@@ -111,7 +111,7 @@
     "        desiredOutputs = patterns[:,:-1].reshape(-1,1)\n",
     "        inputLayers = np.transpose(np.insert(patterns, 0, -1, axis=1)[:,:-1]) # x0 is added to all patterns and its value is -1, output values are excluded\n",
     "        hiddenLayer = np.zeros((hiddenLayerSize+1, 1)) # hiddenlayersize doesn't include h0 so it's added\n",
-    "        hiddenLayer[0,0] = -1 # h0 is equal to -1\n",
+    "        hiddenLayer[0,:] = -1 # h0 is equal to -1\n",
     "        actualOutput = np.zeros_like(desiredOutputs)\n",
     "        for p in range(P):\n",
     "            hiddenLayer[1:] = sigmoidalFunc(w_matrix @ inputLayers[:,p].reshape(-1,1))\n",
@@ -125,6 +125,10 @@
     "            w_matrix += delta_w\n",
     "        alpha = learningRate * alpha\n",
     "        t += 1\n",
+    "        actualHiddens = w_matrix @ inputLayers # h1, ..., hj\n",
+    "        actualOutputMatrix = W_matrix @ np.insert(actualHiddens, 0, -1, axis=0) # o1, ..., oi\n",
+    "        error = np.sum(np.square(desiredOutputs - actualOutputMatrix))\n",
+    "        #print(\"Iteration {0} : error = {1}\".format(t,error))\n",
     "    actualHiddens = w_matrix @ inputLayers # h1, ..., hj\n",
     "    actualOutputMatrix = W_matrix @ np.insert(actualHiddens, 0, -1, axis=0) # o1, ..., oi\n",
     "    error = np.sum(np.square(desiredOutputs - actualOutputMatrix))\n",
@@ -138,7 +142,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(array([[ 3.30973008e+04, -9.32366583e+08],\n        [ 3.47744880e+04, -1.06357359e+09],\n        [ 2.94124974e+04, -6.58364403e+08]]),\n array([[-370.85781848,  -96.94829827, -110.62659934,  -68.38362196]]),\n 1.3618123684146144e+32)"
+      "text/plain": "(array([[ 8.04919429e+03, -7.98117979e+08],\n        [ 1.87193892e+05, -8.29096167e+07],\n        [ 7.49566304e+03, -2.37599797e+08]]),\n array([[-371.36383673,  -83.15681161,   -9.26186584,  -24.74274724]]),\n 1.1336030417733119e+31)"
      },
      "execution_count": null,
      "metadata": {},
@@ -157,7 +161,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(array([[ 3.79614950e+11, -1.04563606e+14, -3.42905476e+16],\n        [ 3.79616710e+11, -1.04581944e+14, -3.43109373e+16],\n        [ 3.79614760e+11, -1.04561629e+14, -3.42883494e+16]]),\n array([[-97721.02106848, -90420.01284156, -90480.12991487,\n         -90413.5315535 ]]),\n 2.178839541466855e+59)"
+      "text/plain": "(array([[ 2.38821993e+11, -5.90337080e+13, -2.35398118e+16],\n        [ 2.38821648e+11, -5.90341186e+13, -2.35401062e+16],\n        [ 2.38821796e+11, -5.90339426e+13, -2.35399800e+16]]),\n array([[-111324.93304916,   99123.48907882,   99138.75872513,\n           99132.2131042 ]]),\n 1.2332644345039047e+59)"
      },
      "execution_count": null,
      "metadata": {},
@@ -167,6 +171,71 @@
    "source": [
     "patterns2 = np.insert(np.array(train_data), 1, np.square(train_data['x']), axis=1)\n",
     "backpropagation(patterns2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def averageError(w_matrix, W_matrix, test_data):\n",
+    "    inputLayers = np.transpose(np.insert(test_data, 0, -1, axis=1)[:,:-1]) # h1, ..., hj\n",
+    "    desiredOutputs = test_data[:,:-1].reshape(-1,1)\n",
+    "    actualHiddens = w_matrix @ inputLayers \n",
+    "    actualOutputMatrix = W_matrix @ np.insert(actualHiddens, 0, -1, axis=0) # o1, ..., oi\n",
+    "    squareResiduals = np.square(desiredOutputs - actualOutputMatrix)\n",
+    "    sse = np.sum(squareResiduals)\n",
+    "    mse = sse / np.size(desiredOutputs)\n",
+    "    variance = np.sum(np.square(mse-squareResiduals)) / (np.size(desiredOutputs) - 1)\n",
+    "    return mse, variance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hiddenUnit(train_data, test_data, Jq = 3, epsilon = 0.001):\n",
+    "    train = np.array(train_data)\n",
+    "    test = np.array(test_data)\n",
+    "    q = 1\n",
+    "    Et = np.infty\n",
+    "    while(True):\n",
+    "        patterns = np.copy(train)\n",
+    "        w, W, total_error = backpropagation(patterns, Jq, epsilon=epsilon)\n",
+    "        Etp, var = averageError(w, W, test)\n",
+    "        print(\"{0} hidden units : MSE = {1}\".format(Jq,Etp))\n",
+    "        if(Etp >= Et):\n",
+    "            break\n",
+    "        Jq += 1\n",
+    "        q += 1\n",
+    "        Et = Etp\n",
+    "    return Jq-1, Et"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "3 hidden units : MSE = 1.7035266648118295e+28\n4 hidden units : MSE = 2.8854480026299475e+31\n"
+    },
+    {
+     "data": {
+      "text/plain": "(3, 1.7035266648118295e+28)"
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hiddenUnit(train_data, test_data, epsilon=0.001)"
    ]
   }
  ],
