--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -9,18 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sympy import Symbol, lambdify"
+    "from sympy import Symbol, lambdify\n",
+    "import pdb\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,114 +204,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train = np.array(train_data['x'])\n",
-    "y_train = np.array(train_data['y'])"
+    "y_train = np.array(train_data['y'])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backpropagation(input_data,label_data,epsilon=0.001):\n",
+    "def backpropagation(input_data,label_data,learning_rate=0.9,alpha=0.5,epsilon=0.001):\n",
+    "    epsilon=epsilon\n",
+    "    t=0\n",
     "    x_train=input_data.reshape(100,1)\n",
+    "    y_train=label_data.reshape(100,1)\n",
     "    all_data=np.full((100, 1), -1)\n",
     "    x_train=np.concatenate((all_data,x_train),axis=1)\n",
-    "    y_train=label_data.reshape(100,1)\n",
-    "    t=0\n",
-    "    learning_rate=0.9\n",
-    "    alpha=0.5\n",
-    "    weight_first=np.random.rand(20,2)\n",
-    "    weight_second=np.random.rand(1,3)#2 hidden units\n",
-    "    h=np.random.rand(100,2)\n",
-    "    H=np.random.rand(100,2)\n",
+    "    weight_first=np.random.rand(3,2)\n",
+    "    weight_second=np.random.rand(1,4)#2 hidden units\n",
+    "    h=np.random.rand(100,3)\n",
+    "    H=np.random.rand(100,3)\n",
     "    o=np.random.rand(100,1)\n",
     "    O=np.random.rand(100,1)\n",
     "    sigma_output=np.random.rand(100,1)\n",
-    "    sigma_hidden=np.random.rand(100,2)\n",
-    "    while(True):\n",
-    "        x_train=shuffle(x_train)    \n",
+    "    sigma_hidden=np.random.rand(100,3)\n",
+    "    Error_value=0\n",
+    "    delta_big=np.random.rand(1,4)\n",
+    "    delta_small=np.random.rand(3,2)\n",
+    "    while(True): \n",
+    "        np.random.shuffle(x_train)     \n",
     "        for p in range(100):\n",
-    "            for j in range(2):\n",
+    "            \n",
+    "            for j in range(3):\n",
+    "                sum_first=0\n",
     "                for k in range(2):\n",
-    "                    h[p,j]=np.sum(weight_first[j,k]*x_train[p,k])\n",
-    "                H[p,j]=1/(1+np.exp(h[p,j]))\n",
-    "\n",
+    "                    \n",
+    "                    sum_first=sum_first+((weight_first[j,k]*x_train[p,k]))\n",
+    "                h[p,j]=sum_first\n",
+    "                H[p,j] = 1/(1+np.exp(-h[p,j]))\n",
+    "            \n",
+    "                \n",
     "            all_data_2=np.full((100,1),-1)\n",
     "            all_data_2=np.concatenate((all_data_2,H),axis=1)\n",
     "            H_with_zero=all_data_2\n",
     "\n",
     "            for i in range(1):\n",
-    "                for j in range(3):\n",
-    "                    o[p,i]=weight_second[i,j]*H_with_zero[p,j]\n",
-    "                O[p,i]=o[p,i] \n",
-    "            for i in range(1):    \n",
+    "                sum_second=0\n",
+    "                for j in range(4):\n",
+    "                    sum_second=sum_second+weight_second[i,j]*H_with_zero[p,j]\n",
+    "                o[p,i]=sum_second\n",
+    "                O[p,i]=o[p,i]\n",
+    "            \n",
+    "            \n",
+    "                \n",
+    "            \n",
+    "            \n",
+    "            for i in range(1):\n",
     "                sigma_output[p,i]=y_train[p,i]-O[p,i]\n",
-    "            for j in range(2):    \n",
+    "               \n",
+    "            for j in range(3): \n",
+    "                sum_third=0\n",
     "                for i in range(1):\n",
-    "                    sum_amount=np.sum(weight_second[i,j]*sigma_output[p,i])\n",
-    "                sigma_hidden[p,j]=H[p,j]*(1-H[p,j])*sum_amount\n",
-    "            for j in range(3):    \n",
-    "                delta=learning_rate*sigma_output[p,i]*H_with_zero[p,j]\n",
-    "                weight_second[i,j]=weight_second[i,j]+delta\n",
-    "            for j in range(2):   \n",
-    "                for k in range(2):    \n",
-    "                    delta_small=learning_rate*sigma_hidden[p,j]*x_train[p,k]\n",
-    "                    weight_first[j,k]=weight_first[j,k]+delta_small\n",
+    "                    sum_third=sum_third+(weight_second[i,j]*sigma_output[p,i])\n",
+    "               \n",
+    "                sigma_hidden[p,j]=H[p,j]*(1-H[p,j])*sum_third\n",
+    "                \n",
+    "            for j in range(4):    \n",
+    "                for i in range(1): \n",
+    "                    delta_big[i,j]=learning_rate*sigma_output[p,i]*H_with_zero[p,j]\n",
+    "                    weight_second[i,j]=weight_second[i,j]+delta_big[i,j]\n",
+    "                    \n",
+    "            for k in range(2):   \n",
+    "                for j in range(3): \n",
+    "                    \n",
+    "                    delta_small[j,k]=learning_rate*sigma_hidden[p,j]*x_train[p,k]\n",
+    "                    weight_first[j,k]=weight_first[j,k]+delta_small[j,k]\n",
+    "                    \n",
+    "        \n",
+    "        summation = 0  #variable to store the summation of differences\n",
+    "        n = len(y_train) #finding total number of items in list\n",
+    "        for i in range (0,n):  #looping through each element of the list\n",
+    "            difference = O[i] - y_train[i]  #finding the difference between observed and predicted value\n",
+    "            squared_difference = difference**2  #taking square of the differene \n",
+    "            summation = summation + squared_difference  #taking a sum of all the differences\n",
+    "        MSE = summation/2  #dividing summation by 2\n",
+    "        print( \"The Mean Square Error is: \" , MSE)\n",
     "        learning_rate=learning_rate*alpha\n",
-    "        print(learning_rate)\n",
     "        t=t+1\n",
-    "        if(learning_rate<epsilon):\n",
-    "            break;\n",
-    "    return weight_first,weight_second"
+    "        \n",
+    "        if learning_rate<epsilon:\n",
+    "            break\n",
+    "    return weight_first,weight_second,MSE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.45\n",
-      "0.225\n",
-      "0.1125\n",
-      "0.05625\n",
-      "0.028125\n",
-      "0.0140625\n",
-      "0.00703125\n",
-      "0.003515625\n",
-      "0.0017578125\n",
-      "0.00087890625\n"
+      "The Mean Square Error is:  [7.4494729e+52]\n",
+      "The Mean Square Error is:  [1.60450185e+53]\n",
+      "The Mean Square Error is:  [2508914.21113687]\n",
+      "The Mean Square Error is:  [2163073.07438283]\n",
+      "The Mean Square Error is:  [2447429.08263533]\n",
+      "The Mean Square Error is:  [2986844.92771541]\n",
+      "The Mean Square Error is:  [3764765.14688899]\n",
+      "The Mean Square Error is:  [4284833.63811607]\n",
+      "The Mean Square Error is:  [4284279.57421693]\n",
+      "The Mean Square Error is:  [4190867.17997067]\n"
      ]
     }
    ],
    "source": [
-    "weight_first,weight_second=backpropagation(x_train,y_train)"
+    "weight_1,weight_2,Error=backpropagation(x_train,y_train)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 427,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
