Seed implementation for backpropagation

--- a/Akin.ipynb
+++ b/Akin.ipynb
@@ -140,6 +140,7 @@
    "outputs": [],
    "source": [
     "def backpropagationWithForLoops(trainingData, hiddenLayerSize, alpha = 0.5, learningRate = 0.9, epsilon = 0.001, seed = 440):\n",
+    "    np.random.seed(seed)\n",
     "    t = 0\n",
     "    patterns = np.copy(trainingData)\n",
     "    patterns = np.insert(patterns, 0, -1, axis=1) # x0 = -1 unit is added\n",
