hidden units algorithm implemented

--- a/HW6.ipynb
+++ b/HW6.ipynb
@@ -204,51 +204,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train = np.array(train_data['x'])\n",
     "y_train = np.array(train_data['y'])\n",
-    "\n"
+    "x_test = np.array(test_data['x'])\n",
+    "y_test = np.array(test_data['y'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def backpropagation(input_data,label_data,learning_rate=0.9,alpha=0.5,epsilon=0.001):\n",
+    "def backpropagation(input_data,label_data,learning_rate=0.5,alpha=0.9,epsilon=0.001,J=3):\n",
     "    epsilon=epsilon\n",
     "    t=0\n",
     "    x_train=input_data.reshape(100,1)\n",
     "    y_train=label_data.reshape(100,1)\n",
     "    all_data=np.full((100, 1), -1)\n",
     "    x_train=np.concatenate((all_data,x_train),axis=1)\n",
-    "    weight_first=np.random.rand(3,2)\n",
-    "    weight_second=np.random.rand(1,4)#2 hidden units\n",
-    "    h=np.random.rand(100,3)\n",
-    "    H=np.random.rand(100,3)\n",
+    "    weight_first=np.random.rand(J,2)\n",
+    "    weight_second=np.random.rand(1,J+1)#2 hidden units\n",
+    "    h=np.random.rand(100,J)\n",
+    "    H=np.random.rand(100,J)\n",
     "    o=np.random.rand(100,1)\n",
     "    O=np.random.rand(100,1)\n",
     "    sigma_output=np.random.rand(100,1)\n",
-    "    sigma_hidden=np.random.rand(100,3)\n",
+    "    sigma_hidden=np.random.rand(100,J)\n",
     "    Error_value=0\n",
-    "    delta_big=np.random.rand(1,4)\n",
-    "    delta_small=np.random.rand(3,2)\n",
+    "    delta_big=np.random.rand(1,J+1)\n",
+    "    delta_small=np.random.rand(J,2)\n",
     "    while(True): \n",
     "        np.random.shuffle(x_train)     \n",
     "        for p in range(100):\n",
     "            \n",
-    "            for j in range(3):\n",
+    "            for j in range(J):\n",
     "                sum_first=0\n",
     "                for k in range(2):\n",
     "                    \n",
@@ -263,77 +257,152 @@
     "\n",
     "            for i in range(1):\n",
     "                sum_second=0\n",
-    "                for j in range(4):\n",
+    "                for j in range(J+1):\n",
     "                    sum_second=sum_second+weight_second[i,j]*H_with_zero[p,j]\n",
     "                o[p,i]=sum_second\n",
     "                O[p,i]=o[p,i]\n",
     "            \n",
     "            \n",
-    "                \n",
-    "            \n",
-    "            \n",
     "            for i in range(1):\n",
     "                sigma_output[p,i]=y_train[p,i]-O[p,i]\n",
     "               \n",
-    "            for j in range(3): \n",
+    "            for j in range(J): \n",
     "                sum_third=0\n",
     "                for i in range(1):\n",
     "                    sum_third=sum_third+(weight_second[i,j]*sigma_output[p,i])\n",
     "               \n",
     "                sigma_hidden[p,j]=H[p,j]*(1-H[p,j])*sum_third\n",
     "                \n",
-    "            for j in range(4):    \n",
+    "            for j in range(J+1):    \n",
     "                for i in range(1): \n",
     "                    delta_big[i,j]=learning_rate*sigma_output[p,i]*H_with_zero[p,j]\n",
     "                    weight_second[i,j]=weight_second[i,j]+delta_big[i,j]\n",
     "                    \n",
     "            for k in range(2):   \n",
-    "                for j in range(3): \n",
+    "                for j in range(J): \n",
     "                    \n",
     "                    delta_small[j,k]=learning_rate*sigma_hidden[p,j]*x_train[p,k]\n",
     "                    weight_first[j,k]=weight_first[j,k]+delta_small[j,k]\n",
     "                    \n",
     "        \n",
-    "        summation = 0  #variable to store the summation of differences\n",
-    "        n = len(y_train) #finding total number of items in list\n",
-    "        for i in range (0,n):  #looping through each element of the list\n",
-    "            difference = O[i] - y_train[i]  #finding the difference between observed and predicted value\n",
-    "            squared_difference = difference**2  #taking square of the differene \n",
-    "            summation = summation + squared_difference  #taking a sum of all the differences\n",
-    "        MSE = summation/2  #dividing summation by 2\n",
-    "        print( \"The Mean Square Error is: \" , MSE)\n",
+    "        \n",
     "        learning_rate=learning_rate*alpha\n",
     "        t=t+1\n",
-    "        \n",
+    "        SSE=SSEFunction(O,y_train)\n",
     "        if learning_rate<epsilon:\n",
     "            break\n",
-    "    return weight_first,weight_second,MSE\n"
+    "    return weight_first,weight_second,SSE,O\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SSEFunction(y_pred,y):\n",
+    "    summation = 0  #variable to store the summation of differences\n",
+    "    n = len(y) #finding total number of items in list\n",
+    "    for i in range (0,n):  #looping through each element of the list\n",
+    "        difference = y_pred[i] - y[i]  #finding the difference between observed and predicted value\n",
+    "        squared_difference = difference**2  #taking square of the differene \n",
+    "        summation = summation + squared_difference  #taking a sum of all the differences\n",
+    "    return summation \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def S2_Function(y_pred,y,MSE):\n",
+    "    summation = 0  #variable to store the summation of differences\n",
+    "    summation\n",
+    "    n = len(y) #finding total number of items in list\n",
+    "    for i in range (0,n):  #looping through each element of the list\n",
+    "        difference = y_pred[i] - y[i]  #finding the difference between observed and predicted value\n",
+    "        squared_difference = difference**2  #taking square of the differene\n",
+    "        squared_variance_difference=(MSE-squared_difference)**2\n",
+    "        summation = summation + squared_variance_difference  #taking a sum of all the differences\n",
+    "    return (summation/(n-1))\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hidden_unit(input_data,label_data):\n",
+    "    average_error_dict = {}\n",
+    "    s2_dict = {}\n",
+    "    q=1 #counter\n",
+    "    J=3 #initial # of hidden units\n",
+    "    Initial_error = np.infty\n",
+    "    y_test=label_data.reshape(len(label_data),1)\n",
+    "    while(True):\n",
+    "        weight_1,weight_2,Error,y_pred=backpropagation(x_train,y_train,J=J)\n",
+    "        SSE_test=SSEFunction(y_pred,y_test)\n",
+    "        MSE_test=SSE_test/len(y_test)\n",
+    "        s2_test=S2_Function(y_pred,y_test,MSE_test)\n",
+    "        average_error_dict[J] = MSE_test\n",
+    "        s2_dict[J] = s2_test\n",
+    "        if(q>=2 and average_error_dict.get(J)>=average_error_dict.get(J-1)):\n",
+    "            break\n",
+    "        J+=1\n",
+    "        q+=1\n",
+    "    hidden_units=J-1    \n",
+    "    return average_error_dict,s2_dict,hidden_units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Mean Square Error is:  [7.4494729e+52]\n",
-      "The Mean Square Error is:  [1.60450185e+53]\n",
-      "The Mean Square Error is:  [2508914.21113687]\n",
-      "The Mean Square Error is:  [2163073.07438283]\n",
-      "The Mean Square Error is:  [2447429.08263533]\n",
-      "The Mean Square Error is:  [2986844.92771541]\n",
-      "The Mean Square Error is:  [3764765.14688899]\n",
-      "The Mean Square Error is:  [4284833.63811607]\n",
-      "The Mean Square Error is:  [4284279.57421693]\n",
-      "The Mean Square Error is:  [4190867.17997067]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "({3: array([101070.38227941]),\n",
+       "  4: array([100494.81445916]),\n",
+       "  5: array([102398.01802062])},\n",
+       " {3: array([1.79504934e+10]),\n",
+       "  4: array([1.84215732e+10]),\n",
+       "  5: array([1.70942441e+10])})"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "weight_1,weight_2,Error=backpropagation(x_train,y_train)"
+    "error_dict,std_dict,number_of_units=hidden_unit(x_test,y_test)\n",
+    "error_dict,std_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_of_units"
    ]
   }
  ],
